--- a/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxss
+++ b/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxss
@@ -1,9 +1,10 @@
 @import '../../../../common/lib/common.wxss';
-.top-tab{
+
+.top-tab {
   width: 750rpx;
   height: 100rpx;
-  background: #2D4E95;
-  color: #8CCEFD;
+  background: #2d4e95;
+  color: #8ccefd;
   font-size: 28rpx;
   line-height: 100rpx;
   box-shadow: 0 2px 2px #bebebe;
@@ -11,88 +12,53 @@
   z-index: 9999;
 }
 
-.toptab.active{
-  color: #ffffff;
-  border-bottom: solid 2px #ffffff;
+.toptab.active {
+  color: #fff;
+  border-bottom: solid 2px #fff;
 }
-.activity{
+
+.activity {
   width: 750rpx;
   height: 375rpx;
 }
-.activity image{
+
+.activity image {
   width: 750rpx;
   height: 375rpx;
 }
-.placehold{
+
+.placehold {
   font-size: 28rpx;
   padding: 80rpx 0;
 }
 
-.order_process {
-display: flex;
-flex-wrap: nowrap;
-padding: 10rpx 10rpx 20rpx 10rpx;
-background-color: #fff;
-}
-.process_wrap {
-display: flex;
-flex-direction: column;
-flex: 1;
-align-items: center;
-}
-.process {
-display: flex;
-align-items: center;
-width: 100%;
-}
-.process_icon {
-width: 50rpx;
-height: 50rpx;
-}
-.process_line {
-background: #eff3f6;
-flex: 1;
-height: 5rpx;
-}
-.process_name {
-font-size: 24rpx;
+/* .category-detail-box {
+  overflow: hidden;
+  padding: 10rpx 10rpx 0rpx;
+  display: flex;
+  justify-content: center;
+  background-color: #fffef9;
 }
 
-/* progress */
-.edit_content .progress{
-  width:494rpx;
-  height: 60rpx;
-  margin:auto;
-  position: relative;
-  display: -webkit-flex;
+.category-main {
+  height: 91%;
+}
+
+.category-goods-items {
+  margin: 5rpx;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+  border:2rpx solid #bebebe
 }
-.progress .pro_border{
-  width:100%;
+
+.group-image {
+  height: 100rpx;
+  width: 100rpx;
 }
-.progress .radius{
-  position: absolute;
-  width:60rpx;
-  height: 60rpx;
-  line-height: 60rpx;
-  border-radius: 50%;
-  background: #E0E2E7;
-  font-family: PingFangSC-Semibold;
-  font-size: 30rpx;
-  color: #737586;
-  text-align:center;
-  top:0;
-}
-.progress .radius_active{
-  background: #F86221;
-  color:#fff;
-}
-.progress .rad_1{
-  left:0;
-}
-.progress .rad_2{
-  left:217rpx;
-}
-.progress .rad_3{
-  right:0;
-}
+
+.fujian{
+  padding: 16px;
+} */
