--- a/page/home/pages/serviceEngineer/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/serviceEngineer/repairingOrderDetail/repairingOrderDetail.wxml
@@ -18,6 +18,18 @@
         <mp-cell value="预约时间" footer="{{orderInfo.mdmcTask.appointTime}}">{{orderInfo.mdmcTask.appointTime}}</mp-cell>
         <mp-cell value="报修人" footer="{{orderInfo.mdmcTask.creator}}">{{orderInfo.mdmcTask.creator}}</mp-cell>
         <mp-cell value="联系电话" footer="{{orderInfo.mdmcTask.call}}" bindtap="makePhone" data-phone="{{orderInfo.mdmcTask.call}}">{{orderInfo.mdmcTask.call}}</mp-cell>
+        <view wx:if="{{taskPictures != null}}">
+          <view class="fujian">附件:</view>
+          <view class="category-detail-box">
+            <block wx:for="{{taskPictures}}" wx:for-item="img" wx:key="img">
+              <!-- 下面存放单个设备的div  -->
+              <view class="category-goods-items">
+                <image class='group-image' bindtap='imageClick' src='{{img.url}}' data-src='{{img.url}}' mode="aspectFill"></image>
+              </view>
+            </block>
+          </view>
+
+        </view>
       </mp-cells>
     </view>
   </view>
@@ -26,15 +38,17 @@
     <view class="page__bd">
       <mp-cells ext-class="my-cells">
         <mp-cell value="服务商" footer="{{orderInfo.pmcProjectDto.partyBName}}">{{orderInfo.pmcProjectDto.partyBName}}</mp-cell>
-        <mp-cell value="维修工" footer="{{orderInfo.engineerDto.name}}">{{orderInfo.engineerDto.name}}</mp-cell>
+        <mp-cell value="维修工" footer="{{orderInfo.engineerDto.loginName}}">{{orderInfo.engineerDto.name}}</mp-cell>
         <mp-cell value="维修建议" footer="{{suggestionOne}}" bindtap="chooseSuggestion">
           {{suggestionOne}}
         </mp-cell>
         <mp-cell value="备品备件" footer="{{}}" bindtap="onAddSpareParts"></mp-cell>
-        <mp-cell value="维修结果" footer="{{orderInfo.mdmcTask.result}}">{{orderInfo.mdmcTask.result}}</mp-cell>
+        <mp-cell value="维修结果" bindtap="showRepairResult" footer="{{orderInfo.mdmcTask.result}}">{{orderInfo.mdmcTask.result}}</mp-cell>
+
+
 
         <modal id="modal" hidden="{{hiddenmodalput}}" title="维修建议" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm">
-          <textarea placeholder="请输入维修建议" bindinput="suggestion" value="{{orderInfo.mdmcTask.suggestion}}"></textarea>
+          <textarea placeholder="请输入维修建议" bindinput="suggestion" value="{{suggestionOne}}"></textarea>
         </modal>
       </mp-cells>
     </view>
@@ -42,13 +56,16 @@
 
   <view class="placehold" hidden="{{currentNavtab==2 ? '' : true}}">
     <view wx:for="{{orderLogs}}" wx:key="item" class="orderlog_view">
-      <view class="orderlog_time">{{item.createdTime}}</view>
       <image class="orderlog_image" src="{{index == 0?'/imgs/others/progress_first.png':'/imgs/others/progress.png'}}"></image>
-      <view class="orderlog_content {{index==0?'first':''}}">{{workOrderStatus[item.status]}},{{item.lastOperator}}</view>
+      <view class="orderlog_content {{index==0?'first':''}}">{{item.movement}},{{item.lastOperator}}</view>
+      <view class="orderlog_time">{{item.createdTime}}</view>
     </view>
   </view>
 
 </view>
 
 <template is="onAddSpareParts" data="{{showSpareParts,deviceOrderCount,allDeviceOrderList,allDevices,allDevicesArray}}">
+</template>
+
+<template is="addRepairResult" data="{{showRepairResult,repairResult,taskPictures}}">
 </template>
