--- a/page/home/pages/all-work-orders/all-work-orders.wxml
+++ b/page/home/pages/all-work-orders/all-work-orders.wxml
@@ -9,7 +9,7 @@
                 </view>
                 <view>{{order.programName}}</view>
                 <view>{{order.deviceName}}</view>
-                <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
+                <view class="mp-cell-view">设备位置:{{order.addressName}}</view>
                 <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
             </mp-cell>
         </mp-cells>
