--- a/page/home/pages/serviceEngineer/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
+++ b/page/home/pages/serviceEngineer/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
@@ -5,7 +5,7 @@
   </view>
 </view>
 <!-- tabbar对应的内容 -->
-<view>
+<!-- <view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==0 ? '' : true}}">
     <view class="page__bd">
       <mp-cells ext-class="my-cells">
@@ -16,8 +16,8 @@
       </mp-cells>
     </view>
   </view>
-</view>
-<view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
+</view> -->
+<view class="ctnt1 placehold" hidden="{{currentNavtab==0 ? '' : true}}">
   <view class="page__bd">
     <mp-cells ext-class="my-cells">
       <!-- <mp-cell value="紧急程度" footer="{{urgentLevel[orderInfo.level]}}">{{urgentLevel[orderInfo.level]}}</mp-cell>
