--- a/page/home/pages/serviceProvider/toBeCheckOrderDetail/toBeCheckOrderDetail.wxml
+++ b/page/home/pages/serviceProvider/toBeCheckOrderDetail/toBeCheckOrderDetail.wxml
@@ -18,10 +18,10 @@
         <mp-cell value="预约时间" footer="{{orderInfo.mdmcTask.appointTime}}">{{orderInfo.mdmcTask.appointTime}}</mp-cell>
         <mp-cell value="报修人" footer="{{orderInfo.mdmcTask.creator}}">{{orderInfo.mdmcTask.creator}}</mp-cell>
         <mp-cell value="联系电话" footer="{{orderInfo.mdmcTask.call}}" bindtap="makePhone" data-phone="{{orderInfo.mdmcTask.call}}">{{orderInfo.mdmcTask.call}}</mp-cell>
-        <view wx:if="{{taskPictures != null}}">
+        <view wx:if="{{taskPictures2 != null}}">
           <view class="fujian">附件:</view>
           <view class="category-detail-box">
-            <block wx:for="{{taskPictures}}" wx:for-item="img" wx:key="img">
+            <block wx:for="{{taskPictures2}}" wx:for-item="img" wx:key="img">
               <!-- 下面存放单个设备的div  -->
               <view class="category-goods-items">
                 <image class='group-image' bindtap='imageClick' src='{{img.url}}' data-src='{{img.url}}' mode="aspectFill"></image>
@@ -41,6 +41,17 @@
         <mp-cell value="维修建议" footer="{{orderInfo.mdmcTask.suggestionOne}}" bindtap="showAllSuggestion">{{orderInfo.mdmcTask.suggestionOne}}</mp-cell>
         <mp-cell value="备品备件" footer="{{}}" bindtap="onAddSpareParts"></mp-cell>
         <mp-cell value="维修结果" footer="{{orderInfo.mdmcTask.result}}">{{orderInfo.mdmcTask.result}}</mp-cell>
+          <view wx:if="{{taskPicture10 != null}}">
+          <view class="fujian">附件:</view>
+          <view class="category-detail-box">
+            <block wx:for="{{taskPicture10}}" wx:for-item="img" wx:key="img">
+              <!-- 下面存放单个设备的div  -->
+              <view class="category-goods-items">
+                <image class='group-image' bindtap='image10Click' src='{{img.url}}' data-src='{{img.url}}' mode="aspectFill"></image>
+              </view>
+            </block>
+          </view>
+        </view>
       </mp-cells>
     </view>
   </view>
