--- a/page/common/modal/modal-tpl.wxss
+++ b/page/common/modal/modal-tpl.wxss
@@ -160,3 +160,11 @@ input-holder {
   text-align: center;
   border: 1px solid #eee;
 }
+textarea {
+    width: 700rpx;
+    padding: 25rpx 0;
+}
+.textarea-wrp {
+    padding: 0 25rpx;
+    background-color: #fff;
+}
