--- a/page/message/index.wxml
+++ b/page/message/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/message/message.wxml-->
-<view class="top-tab flex-wrp flex-tab">
+<view class="top-tab flex-wrp flex-tab" wx:if="{{userInfo != null}}">
   <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:key="item" data-idx="{{idx}}" bindtap="switchTab">
     {{item}}
   </view>
