--- a/page/my/pages/login/login.wxml
+++ b/page/my/pages/login/login.wxml
@@ -10,21 +10,26 @@
         <form class="login-form">
           <view class="input-group {{userid_focus ? 'active' : ''}}">
             <text class="input-label">帐号</text>
-            <input type="text" cursor-spacing="30" id="userid" placeholder="请输入账号" bindinput="getUserId" bindfocus="inputFocus" bindblur="inputBlur" />
+            <input type="text" cursor-spacing="40" id="userid" placeholder="请输入账号" bindinput="getUserId" bindfocus="inputFocus" bindblur="inputBlur" />
           </view>
           <view class="input-group {{passwd_focus ? 'active' : ''}}">
             <text class="input-label">密码</text>
-            <input password="true" cursor-spacing="30" id="passwd" placeholder="请输入密码" bindinput="getPassword" bindfocus="inputFocus" bindblur="inputBlur" />
+            <input password="true" cursor-spacing="40" id="passwd" placeholder="请输入密码" bindinput="getPassword" bindfocus="inputFocus" bindblur="inputBlur" />
           </view>
 
+          <view class="imagecode-box">
           <view class="input-group {{imagecode_focus ? 'active' : ''}}">
             <text class="input-label">验证码</text>
-            <input type="number" cursor-spacing="30" id=imagecode" placeholder="请输入验证码" bindinput="getImagecode" bindfocus="inputFocus" bindblur="inputBlur" value="{{imagecode}}"/>
+            <input type="number" cursor-spacing="40" id=imagecode" placeholder="请输入验证码" bindinput="getImagecode" bindfocus="inputFocus" bindblur="inputBlur" value="{{imagecode}}"/>
           </view>
           
           <view class="imagecode-view">
           <image class="imageCode" src="{{imageCode}}"></image>
-          <view bindtap = "refreshImagecode">刷新</view>
+          <view bindtap = "refreshImagecode">
+          <image class="refresh-img" src="/imgs/icon/refresh.png"></image>
+          </view>
+          </view>
+
           </view>
 
           <view class="login-help" bindtap="showHelp">
