--- a/page/common/modal/modal-tpl.wxml
+++ b/page/common/modal/modal-tpl.wxml
@@ -35,6 +35,23 @@
   </view>
 </template>
 
+<!--提交维修结果弹窗-->
+<template name="repairResult">
+  <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showEdit}}"></view>
+  <view class="modal-dialog" wx:if="{{showEdit}}">
+    <view class="modal-title">{{content.title}}</view>
+    <view class="modal-content">
+      <view class="modal-input">
+        <input placeholder-class="input-holder" type="text" maxlength="20" focus="true" bindinput="inputChange" class="input" placeholder="{{content.placeholder}}"></input>
+      </view>
+    </view>
+    <view class="modal-footer">
+      <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
+      <view class="btn-confirm" bindtap="confirmInput" data-status="confirm">确定</view>
+    </view>
+  </view>
+</template>
+
 <!-- 添加备品备件-->
 <template name="onAddSpareParts">
   <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showSpareParts}}"></view>
